--- a/src/main/resources/templates/databases2.html
+++ b/src/main/resources/templates/databases2.html
@@ -161,6 +161,8 @@ code,pre{font-family:Monaco,Consolas,"Lucida Console",monospace;
         <th>Storage Size (GB)</th>
         <th>Indexes</th>
         <th>Index Size (MB)</th>
+        <th>Data in Cache (GB)</th>
+        <th>Index in Cache (GB)</th>
       </tr>
       </thead>
       <tbody>
@@ -180,6 +182,8 @@ code,pre{font-family:Monaco,Consolas,"Lucida Console",monospace;
         <td class="right">$String.format("%,.1f", ${dbStats.storageSizeGB})</td>
         <td class="right">${dbStats.indexes}</td>
         <td class="right">$String.format("%,.0f", ${dbStats.indexSize})</td>
+        <td class="right">$String.format("%,.1f", ${db.totalDataBytesInCache})</td>
+        <td class="right">$String.format("%,.1f", ${db.totalIndexBytesInCache})</td>
       </tr>
       #end
       <tbody>
